kubernetes/apps/landing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing
  labels:
    app.kubernetes.io/name: landing
    app.kubernetes.io/part-of: lum-tools
